# mini-universe

./: Makefile  README.md
cfg/: 256-a.txt  current.txt  default-smaller.txt  default.txt  orderly-for-a-while.txt  orderly-for-a-while.txt-smaller  template.txt  three-body-seed-a.txt  will-it-stop-expanding.txt  will-it-stop-expanding.txt-smaller
src/: args.c  args.h  file.c  file.h  main.c  render.c  render.h  simulation.c  simulation.h  version.h  xymath.h
src/cli/: CMakeLists.txt  main.c  render.c  screen.c  screen.h
src/gl/: CMakeLists.txt  main.c  main_glut.c  render.c
